[fix]:Section3 card problem on mobile 10th

--- a/css/style.css
+++ b/css/style.css
@@ -221,9 +221,6 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    cursor: pointer; /* 鼠标悬停时显示为可点击 */
-    transition: transform 0.3s ease-in-out;
-    position: relative; /* 为点击链接定位 */
 }
 
 .room-item img {
